# ChangeLog for x11-libs/gtk-sharp
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtk-sharp/ChangeLog,v 1.12 2004/02/02 07:00:15 tberman Exp $

  01 Feb 2004; Todd Berman <tberman@gentoo.org> gtk-sharp-0.10.ebuild,
  gtk-sharp-0.12.ebuild, gtk-sharp-0.13.ebuild, gtk-sharp-0.14.ebuild,
  gtk-sharp-0.8.ebuild, gtk-sharp-0.9.ebuild:
  Removing cruft, apply patch from #38123, marking 0.14 stable, putting 0.15 in
  ~x86

*gtk-sharp-0.14 (05 Dec 2003)

  05 Dec 2003; Todd Berman <tberman@gentoo.org> gtk-sharp-0.14.ebuild:
  Version bump, adding gtkhtml useflag

*gtk-sharp-0.13 (14 Nov 2003)

  14 Nov 2003; Todd Berman <tberman@gentoo.org> gtk-sharp-0.13.ebuild:
  version bump

*gtk-sharp-0.12 (04 Nov 2003)

  04 Nov 2003; Todd Berman gtk-sharp-0.12.ebuild:
  Version bump, dropped double configure.

  25 Jul 2003; Todd Berman <tberman@gentoo.org> gtk-sharp-0.10.ebuild,
  gtk-sharp-0.8.ebuild, gtk-sharp-0.9.ebuild:
  changing mono depend because of lang->dotnet move.

  09 Jul 2003; Alastair Tse <liquidx@gentoo.org> gtk-sharp-0.10.ebuild,
  gtk-sharp-0.8.ebuild, gtk-sharp-0.9.ebuild:
  added pkgconfig deps

  08 Jul 2003; Alastair Tse <liquidx@gentoo.org> gtk-sharp-0.10.ebuild:
  disable installing schemas to prevent sandbox violations

*gtk-sharp-0.10 (24 Jun 2003)

  24 Jun 2003; foser <foser@gentoo.org> gtk-sharp-0.10.ebuild :
  New version, added libgda USE depend (#23073)

*gtk-sharp-0.9 (08 May 2003)

  09 May 2003; foser <foser@gentoo.org> gtk-sharp-0.9.ebuild :
  Added fix for possible upgrade problem (#20612,#20649)

  08 May 2003; foser <foser@gentoo.org> gtk-sharp-0.9.ebuild :
  New version, removed switches they were useless, added local gnomedb useflag

*gtk-sharp-0.8 (24 Feb 2003)

  27 Feb 2003; foser <foser@gentoo.org> gtk-sharp* :
  Moved category from dev-libs to x11-libs 
  gtk-sharp-0.8 now uses mono eclass

  24 Feb 2003; foser <foser@gentoo.org> gtk-sharp-0.8.ebuild :