@@ -1,6 +1,11 @@
 # ChangeLog for x11-libs/gtk-sharp
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtk-sharp/ChangeLog,v 1.12 2004/02/02 07:00:15 tberman Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtk-sharp/ChangeLog,v 1.13 2004/02/08 19:27:00 tberman Exp $
+
+*gtk-sharp-0.16 (08 Feb 2004)
+
+  08 Feb 2004; Todd Berman <tberman@gentoo.org> gtk-sharp-0.16.ebuild:
+  version bump
 
   01 Feb 2004; Todd Berman <tberman@gentoo.org> gtk-sharp-0.10.ebuild,
   gtk-sharp-0.12.ebuild, gtk-sharp-0.13.ebuild, gtk-sharp-0.14.ebuild,
